@@ -1,4 +1,4 @@
-/* $Id: tif_getimage.c,v 1.52 2006-04-04 02:00:08 joris Exp $ */
+/* $Id: tif_getimage.c,v 1.53 2006-04-07 00:08:56 joris Exp $ */
 
 /*
  * Copyright (c) 1991-1997 Sam Leffler
@@ -808,7 +808,7 @@ gtStripContig(TIFFRGBAImage* img, uint32* raster, uint32 w, uint32 h)
     }
 
     TIFFGetFieldDefaulted(tif, TIFFTAG_ROWSPERSTRIP, &rowsperstrip);
-    scanline = TIFFScanlineSize(tif);
+    scanline = TIFFNewScanlineSize(tif);
     fromskew = (w < imagewidth ? imagewidth - w : 0);
     for (row = 0; row < h; row += nrow) 
     {
